--- a/src/components/ui/Header.css
+++ b/src/components/ui/Header.css
@@ -3,6 +3,7 @@
 	font-size: 2.2rem;
 	padding: 1rem;
 	justify-content: space-between;
+	position: fixed;
 }
 .button {
 	display: inline-flex;
